--- a/css/index.css
+++ b/css/index.css
@@ -123,7 +123,7 @@ html body {
     
     font-size: 55px;
     font-weight: bold;
-    color: #001affa8;
+    color: #fff;
     text-shadow: 5px 5px 3px rgba(0, 0, 0, 0.801);
 
 
