--- a/css/index.css
+++ b/css/index.css
@@ -341,7 +341,7 @@ html body {
     width: 2.3%;
     height: 8px;
     border-radius: 4px;
-    background-color: #d8c1c1;
+    background-color: #00fff2;
     float: left;
     margin-top: 16px;
     margin-left: -16px;
@@ -363,12 +363,12 @@ html body {
 .skill-lever-bg{
     width: 100%;
     height: 6px;
-    background-color: #A0E1C9;
+    background-color: #6ba791;
     border-radius: 3px;
 }
 .skill-lever{
     width: 0px;
     height: 6px;
     border-radius: 3px;
-    background-color: #1DA577;
+    background-color: #08ff9c;
 }
