--- a/css/index.css
+++ b/css/index.css
@@ -199,7 +199,7 @@ html body {
 }
 
 .githubHerfBox {
-    background-color: #101420;
+    background-color: #003152;
     width: 350px;
     height: 50px;
     position: fixed;
@@ -215,17 +215,17 @@ html body {
     width: 100%;
     height: 62%;
     margin-top: 7px;
-    border-top: 2px dashed #e6dbdb;
-    border-bottom: 2px dashed #e6dbdb;
+    border-top: 2px dashed #ffffff;
+    border-bottom: 2px dashed #ffffff;
     line-height: 30px;
     text-align: center;
     vertical-align: middle;
 }
 
 .githubHerfMenu span {
-    color: #ffffff;
+    color: #fafafa;
     font-size: 22px;
-    font-weight: 500;
+    font-weight:300;
 
 
 }
