--- a/css/index.css
+++ b/css/index.css
@@ -82,7 +82,7 @@ html body {
     width: 100%;
     height: 150px;
     padding-top: 10px;
-    background-image: linear-gradient(to bottom, rgb(255, 255, 255), transparent);
+    background-image: linear-gradient(to bottom, rgb(0, 0, 0), transparent);
 
 
 }
@@ -105,9 +105,9 @@ html body {
 .headerContentTitle {
     width: 100%;
     height: 140px;
-
+    border-bottom: 4px solid #330404;
     border-radius: 30px;
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.685), transparent);
+    background-image: linear-gradient(to top, rgb(0, 0, 0), transparent);
 
 }
 
